--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,34 @@ input {
   border-radius: 5px;
   padding: 5px 3px;
   outline: none;
+  width: 200px;
+}
+input:focus {
+  border: 2px solid blueviolet;
 }
 
-input:focus {
-  border: 1px solid blueviolet;
+.formControl {
+  width: 20rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.btn {
+  color: #6d28d9;
+  background-color: #fff;
+  border: 1px solid #6d28d9;
+  border-radius: 5px;
+  outline: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.remove {
+  color: rgb(236, 68, 68);
+  border: 1px solid rgb(236, 68, 68);
+  margin-left: 7px;
+}
+.addTodo {
+  color: #fff;
+  background-color: #6d28d9;
 }
