--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  padding: 10px;
+  padding: 10px 0;
 }
 .App h1 {
   margin-bottom: 30px;
@@ -26,6 +26,10 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+}
+.todoText {
+  cursor: pointer;
+  font-weight: bold;
 }
 .completed {
   text-decoration: line-through;
@@ -66,4 +70,32 @@ input:focus {
 .addTodo {
   color: #fff;
   background-color: #6d28d9;
+}
+header {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefef;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+header h2 {
+  font-size: 14px;
+  color: #7e22ce;
+}
+header span {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #7e22ce;
+  background-color: #d0c7f7;
+  border-radius: 50%;
+  margin-left: 3px;
+  margin-bottom: 8px;
+  font-size: 12px;
 }
